* 1.2.0 - ??? ?? ????
- Refactoring of Monitoring to allow more and better monitoring
- Add new property to Monitoring, rss_limit, which if specified will cause the
program to restart if it exceeds that many kB of Resident Set Size (private
memory)
- Some fixes and improvements to using --debug




* 1.1.1 - Mar 11 2016
- Turns out python 2.7.8 does not have the enum type, and we should support older python 2.7s, so 
give a fallback method for returnCodeToString that doesn't rely on enum

* 1.1.0 - Mar 11 2016
- Add "--parallel" flag that can be used with "usrsvc start/stop/restart all"
to perform the action in parallel instead of serially.
- Instead of a flat "did" or "did not" start, capture more conditions on WHY
we couldn't start a program
- Much more logging in the realm of starting programs, relating to conditions
of failure
- Add more error codes to ReturnCodes for more specific reasons of failure
- Implement ReturnCodes.returnCodeToString which will get the string
representation of the return code.
- Use the string representation of return codes in logging
- Be more verbose in several places with logging
- Change from raising exceptions in startProgram to returning relevant error
code for better reporting

* 1.0.0 - Mar 9 2016
- Initial Beta Release