@@ -40,8 +40,8 @@ if __name__ == '__main__':
             maintainer='Tim Savannah',
             url='https://github.com/kata198/usrsvc',
             maintainer_email='kata198@gmail.com',
-            requires=['configobj', 'NamedAtomicLock'],
-            install_requires=['configobj', 'NamedAtomicLock'],
+            requires=['configobj', 'NamedAtomicLock', 'func_timeout'],
+            install_requires=['configobj', 'NamedAtomicLock', 'func_timeout'],
             description=summary,
             long_description=long_description,
             license='GPLv2',
